# transfinite

./: .gitignore  .gitmodules  .hgignore  README.md
doc/: transfinite-lib.lyx
models/: cagd86.gbp  cagd86.lop  cagd86.skd  cagd86.sp  pocket3sided.lop  pocket3sided.py  pocket4sided.lop  pocket6sided.lop  trebol.sdm
scripts/: batch-test.py
src/: CMakeLists.txt  domain-regular.cc  domain-regular.hh  domain.hh  geometry.hh  parameterization-bilinear.cc  parameterization.hh  ribbon.hh  surface.hh  transfinite-free.sln  transfinite.sln
src/cmake/Modules/: FindLibTriangle.cmake
src/geoduck/: CMakeLists.txt  geoduck.vcxproj  transfinite-kapi.cc  transfinite-kapi.hh
src/geom/: CMakeLists.txt  bezier.cc  bspline.cc  downhill.cpp  downhill.h  geom.sln  geom.vcxproj  geometry.hh  matrix3x3.cc  trimesh.cc  vector.cc
src/geometry/: CMakeLists.txt  ProgressIndicator.h  bspline-impl.hh  fitter-impl.hh  geometry.cc  geometry.hh  geometry.sln  geometry.vcxproj  iges-impl.hh  trimesh-impl.hh  vector-impl.hh
src/pytransurf/: CMakeLists.txt  pytransurf.cc  pytransurf.vcxproj
src/test/: CMakeLists.txt  bezier.hh  cp-centers.cc  cp-centers.hh  gb-fit.cc  gb-fit.hh  io.cc  io.hh  kapi-test.cc  kapi-test.vcxproj  nelder-mead.cc  test-free.vcxproj  test.cc  test.vcxproj
src/transfinite/: CMakeLists.txt  curves.hh  domain-angular.cc  domain-angular.hh  domain-circle.cc  domain-circle.hh  domain-circular.cc  domain-circular.hh  domain-regular.cc  domain-regular.hh  domain.cc  domain.hh  parameterization-barycentric.cc  parameterization-barycentric.hh  parameterization-bilinear.cc  parameterization-bilinear.hh  parameterization-circular.cc  parameterization-circular.hh  parameterization-constrained-barycentric.cc  parameterization-constrained-barycentric.hh  parameterization-interconnected.cc  parameterization-interconnected.hh  parameterization-overlap.cc  parameterization-overlap.hh  parameterization-parallel.cc  parameterization-parallel.hh  parameterization-perp-polar.cc  parameterization-perp-polar.hh  parameterization-polar.cc  parameterization-polar.hh  parameterization-superd.cc  parameterization-superd.hh  parameterization.cc  parameterization.hh  ribbon-compatible-with-handler.cc  ribbon-compatible-with-handler.hh  ribbon-compatible.cc  ribbon-compatible.hh  ribbon-coons.cc  ribbon-coons.hh  (+51 more)
src/utils/: CMakeLists.txt  bezier.cc  gb-fit.cc  gb-fit.hh  io.cc  io.hh  nelder-mead.cc  nelder-mead.hh  utils.vcxproj
