if(USE_OWN_GEOMETRY_LIB)
  include_directories(../geom)
else()
  include_directories(../geometry)
endif()

add_library(transfinite
  rmf.cc
  domain.cc
    domain-regular.cc
    domain-circular.cc
    domain-angular.cc
  parameterization.cc
    parameterization-bilinear.cc
    parameterization-barycentric.cc
    parameterization-constrained-barycentric.cc
    parameterization-interconnected.cc
    parameterization-parallel.cc
    parameterization-polar.cc
  ribbon.cc
    ribbon-compatible.cc
    ribbon-compatible-with-handler.cc
    ribbon-nsided.cc
  surface.cc
    surface-side-based.cc
    surface-corner-based.cc
    surface-generalized-bezier.cc
    surface-generalized-coons.cc
    surface-composite-ribbon.cc
    surface-midpoint.cc
    surface-midpoint-coons.cc
    surface-polar.cc
  utilities.cc
)
